test/errors/lexer.ms
s = "Hello
world!"
// Lexer Error: missing closing quote (") [line 1]

